--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ php:
   - '7.2'
   - '7.3'
 
+before_script:
+  - composer install --prefer-dist
+
 script:
   - vendor/bin/phpunit
   - vendor/bin/phpcs src tests
