--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Creates demo sites from the current working directory",
     "type": "project",
     "require": {
-        "symfony/console": "^4.2",
-        "symfony/process": "^4.2"
+        "symfony/console": "^3.0 || ^4.0",
+        "symfony/process": "^3.0 || ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
