--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Creates demo sites from the current working directory",
     "type": "project",
     "require": {
+        "php": ">=7.1.0",
         "symfony/console": "^3.0 || ^4.0",
         "symfony/process": "^3.0 || ^4.0"
     },
