--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": ">=7.1.0",
         "symfony/console": "^3.0 || ^4.0",
-        "symfony/process": "^3.0 || ^4.0"
+        "symfony/process": "^3.0 || ^4.0",
+        "symfony/filesystem": "^3.0 || ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
