--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=7.1.0",
         "symfony/console": "^3.0 || ^4.0",
         "symfony/process": "^3.0 || ^4.0",
-        "symfony/filesystem": "^3.0 || ^4.0"
+        "symfony/filesystem": "^3.0 || ^4.0",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
